--- a/Source/YamsterCmd/YamsterCmd.csproj
+++ b/Source/YamsterCmd/YamsterCmd.csproj
@@ -58,9 +58,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Yamster.Core">
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Common\ProductAssemblyInfo.cs">
@@ -78,6 +75,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Yamster.Core\Yamster.Core.csproj">
+      <Project>{C03A86E2-EA46-46A6-8240-D3F6B661A502}</Project>
+      <Name>Yamster.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
